--- a/src/notebook/EDA.ipynb
+++ b/src/notebook/EDA.ipynb
@@ -18,11 +18,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/04/09 10:52:45 WARN Utils: Your hostname, dtdat resolves to a loopback address: 127.0.1.1; using 192.168.2.12 instead (on interface wlp0s20f3)\n",
-      "25/04/09 10:52:45 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "25/04/09 10:52:45 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/04/28 21:15:20 WARN Utils: Your hostname, dtdat resolves to a loopback address: 127.0.1.1; using 192.168.2.12 instead (on interface wlp0s20f3)\n",
+      "25/04/28 21:15:20 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/04/28 21:15:20 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/04/28 21:15:34 WARN GarbageCollectionMetrics: To enable non-built-in garbage collector(s) List(G1 Concurrent GC), users should configure it(them) to spark.eventLog.gcMetrics.youngGenerationGarbageCollectors or spark.eventLog.gcMetrics.oldGenerationGarbageCollectors\n"
      ]
     }
    ],
@@ -40,24 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/04/09 10:52:47 WARN MetricsConfig: Cannot locate configuration: tried hadoop-metrics2-s3a-file-system.properties,hadoop-metrics2.properties\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = spark.read.parquet(\"s3a://bronze/yellow_tripdata_2024-01.parquet\")"
+    "df = spark.read.parquet(\"s3a://silver/yellow_tripdata_2024-01/part-00001-0074987a-f48b-41e9-a464-bbf4648c7ab8-c000.snappy.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
