--- a/src/notebook/EDA.ipynb
+++ b/src/notebook/EDA.ipynb
@@ -160,33 +160,393 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"/home/drissdo/Desktop/End-to-end-NYC-analysis/src/notebook/yellow_tripdata_2024-01.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "connection to server on socket \"/var/run/postgresql/.s.PGSQL.5432\" failed: No such file or directory\n\tIs the server running locally and accepting connections on that socket?\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpsycopg2\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m conn \u001b[38;5;241m=\u001b[39m \u001b[43mpsycopg2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m            \u001b[49m\u001b[43mhost\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetenv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPOSTGRES_HOST\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m            \u001b[49m\u001b[43mport\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetenv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPOSTGRES_PORT\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m            \u001b[49m\u001b[43muser\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetenv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPOSTGRES_USER\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m            \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetenv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPOSTGRES_PASSWORD\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m            \u001b[49m\u001b[43mdatabase\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetenv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPOSTGRES_DB\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/anaconda3/envs/bigdata/lib/python3.10/site-packages/psycopg2/__init__.py:122\u001b[0m, in \u001b[0;36mconnect\u001b[0;34m(dsn, connection_factory, cursor_factory, **kwargs)\u001b[0m\n\u001b[1;32m    119\u001b[0m     kwasync[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124masync_\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m kwargs\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124masync_\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    121\u001b[0m dsn \u001b[38;5;241m=\u001b[39m _ext\u001b[38;5;241m.\u001b[39mmake_dsn(dsn, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m--> 122\u001b[0m conn \u001b[38;5;241m=\u001b[39m \u001b[43m_connect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdsn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconnection_factory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconnection_factory\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwasync\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cursor_factory \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    124\u001b[0m     conn\u001b[38;5;241m.\u001b[39mcursor_factory \u001b[38;5;241m=\u001b[39m cursor_factory\n",
-      "\u001b[0;31mOperationalError\u001b[0m: connection to server on socket \"/var/run/postgresql/.s.PGSQL.5432\" failed: No such file or directory\n\tIs the server running locally and accepting connections on that socket?\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VendorID</th>\n",
+       "      <th>tpep_pickup_datetime</th>\n",
+       "      <th>tpep_dropoff_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>RatecodeID</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>extra</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>total_amount</th>\n",
+       "      <th>congestion_surcharge</th>\n",
+       "      <th>Airport_fee</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-01 00:57:55</td>\n",
+       "      <td>2024-01-01 01:17:43</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>1</td>\n",
+       "      <td>N</td>\n",
+       "      <td>186</td>\n",
+       "      <td>79</td>\n",
+       "      <td>2</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>22.70</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-01-01 00:03:00</td>\n",
+       "      <td>2024-01-01 00:09:36</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>N</td>\n",
+       "      <td>140</td>\n",
+       "      <td>236</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.75</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-01-01 00:17:06</td>\n",
+       "      <td>2024-01-01 00:35:01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>N</td>\n",
+       "      <td>236</td>\n",
+       "      <td>79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>31.30</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-01-01 00:36:38</td>\n",
+       "      <td>2024-01-01 00:44:56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>N</td>\n",
+       "      <td>79</td>\n",
+       "      <td>211</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.00</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-01-01 00:46:51</td>\n",
+       "      <td>2024-01-01 00:52:57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>N</td>\n",
+       "      <td>211</td>\n",
+       "      <td>148</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.10</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2699908</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-30 19:40:55</td>\n",
+       "      <td>2024-01-30 19:53:02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>N</td>\n",
+       "      <td>161</td>\n",
+       "      <td>238</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>4.42</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>26.52</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2699909</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-30 19:08:39</td>\n",
+       "      <td>2024-01-30 19:16:31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>N</td>\n",
+       "      <td>163</td>\n",
+       "      <td>246</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>19.50</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2699910</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-30 19:46:49</td>\n",
+       "      <td>2024-01-30 19:59:02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.97</td>\n",
+       "      <td>1</td>\n",
+       "      <td>N</td>\n",
+       "      <td>230</td>\n",
+       "      <td>236</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24.61</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2699911</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-01-30 19:41:31</td>\n",
+       "      <td>2024-01-30 19:46:23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>N</td>\n",
+       "      <td>170</td>\n",
+       "      <td>107</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21.00</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2699912</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-01-30 19:54:57</td>\n",
+       "      <td>2024-01-30 20:09:06</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>N</td>\n",
+       "      <td>164</td>\n",
+       "      <td>87</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.2</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>6.55</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>32.75</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2699913 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         VendorID tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n",
+       "0               2  2024-01-01 00:57:55   2024-01-01 01:17:43                1   \n",
+       "1               1  2024-01-01 00:03:00   2024-01-01 00:09:36                1   \n",
+       "2               1  2024-01-01 00:17:06   2024-01-01 00:35:01                1   \n",
+       "3               1  2024-01-01 00:36:38   2024-01-01 00:44:56                1   \n",
+       "4               1  2024-01-01 00:46:51   2024-01-01 00:52:57                1   \n",
+       "...           ...                  ...                   ...              ...   \n",
+       "2699908         2  2024-01-30 19:40:55   2024-01-30 19:53:02                1   \n",
+       "2699909         2  2024-01-30 19:08:39   2024-01-30 19:16:31                1   \n",
+       "2699910         2  2024-01-30 19:46:49   2024-01-30 19:59:02                1   \n",
+       "2699911         1  2024-01-30 19:41:31   2024-01-30 19:46:23                0   \n",
+       "2699912         1  2024-01-30 19:54:57   2024-01-30 20:09:06                2   \n",
+       "\n",
+       "         trip_distance  RatecodeID store_and_fwd_flag  PULocationID  \\\n",
+       "0                 1.72           1                  N           186   \n",
+       "1                 1.80           1                  N           140   \n",
+       "2                 4.70           1                  N           236   \n",
+       "3                 1.40           1                  N            79   \n",
+       "4                 0.80           1                  N           211   \n",
+       "...                ...         ...                ...           ...   \n",
+       "2699908           3.14           1                  N           161   \n",
+       "2699909           1.45           1                  N           163   \n",
+       "2699910           2.97           1                  N           230   \n",
+       "2699911           0.80           1                  N           170   \n",
+       "2699912           4.60           1                  N           164   \n",
+       "\n",
+       "         DOLocationID  payment_type  fare_amount  extra  mta_tax  tip_amount  \\\n",
+       "0                  79             2         17.7    1.0      0.5        0.00   \n",
+       "1                 236             1         10.0    3.5      0.5        3.75   \n",
+       "2                  79             1         23.3    3.5      0.5        3.00   \n",
+       "3                 211             1         10.0    3.5      0.5        2.00   \n",
+       "4                 148             1          7.9    3.5      0.5        3.20   \n",
+       "...               ...           ...          ...    ...      ...         ...   \n",
+       "2699908           238             1         15.6    2.5      0.5        4.42   \n",
+       "2699909           246             1         10.0    2.5      0.5        3.00   \n",
+       "2699910           236             1         14.9    2.5      0.5        3.21   \n",
+       "2699911           107             1          6.5    5.0      0.5        8.00   \n",
+       "2699912            87             1         21.2    3.5      0.5        6.55   \n",
+       "\n",
+       "         tolls_amount  improvement_surcharge  total_amount  \\\n",
+       "0                 0.0                    1.0         22.70   \n",
+       "1                 0.0                    1.0         18.75   \n",
+       "2                 0.0                    1.0         31.30   \n",
+       "3                 0.0                    1.0         17.00   \n",
+       "4                 0.0                    1.0         16.10   \n",
+       "...               ...                    ...           ...   \n",
+       "2699908           0.0                    1.0         26.52   \n",
+       "2699909           0.0                    1.0         19.50   \n",
+       "2699910           0.0                    1.0         24.61   \n",
+       "2699911           0.0                    1.0         21.00   \n",
+       "2699912           0.0                    1.0         32.75   \n",
+       "\n",
+       "         congestion_surcharge  Airport_fee  \n",
+       "0                         2.5          0.0  \n",
+       "1                         2.5          0.0  \n",
+       "2                         2.5          0.0  \n",
+       "3                         2.5          0.0  \n",
+       "4                         2.5          0.0  \n",
+       "...                       ...          ...  \n",
+       "2699908                   2.5          0.0  \n",
+       "2699909                   2.5          0.0  \n",
+       "2699910                   2.5          0.0  \n",
+       "2699911                   2.5          0.0  \n",
+       "2699912                   2.5          0.0  \n",
+       "\n",
+       "[2699913 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import psycopg2\n",
-    "import os\n",
-    "\n",
-    "conn = psycopg2.connect(\n",
-    "            host=\"localhost\",\n",
-    "            port=\"5432\",\n",
-    "            user=\"postgres\",\n",
-    "            password=\"postgres123\",\n",
-    "            database=\"postgres\"\n",
-    "        )"
+    "df"
    ]
   },
   {
