remove unimportant files

--- a/src/notebook/Test_silver_to_gold.ipynb
+++ b/src/notebook/Test_silver_to_gold.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "15235325",
    "metadata": {},
    "outputs": [
@@ -49,19 +49,19 @@
     }
    ],
    "source": [
-    "bucket_name = \"silver\"  # Replace with your bucket name\n",
+    "bucket_name = \"silver\" \n",
     "\n",
-    "# Step 1: List all Parquet files in the bucket\n",
+    "\n",
     "objects = client.list_objects(bucket_name, recursive=True)\n",
     "\n",
-    "# Step 2: Group files by folder\n",
+    "\n",
     "folder_files = defaultdict(list)\n",
     "\n",
     "for obj in objects:\n",
     "    if obj.object_name.endswith('.parquet'):\n",
-    "        # Extract folder name from the path\n",
+    "        \n",
     "        folder_name = os.path.dirname(obj.object_name)\n",
-    "        if folder_name:  # Skip if file is in root directory\n",
+    "        if folder_name:\n",
     "            folder_files[folder_name].append(obj.object_name)\n",
     "\n",
     "print(f\"Found {len(folder_files)} folders with Parquet files.\")"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "beb1aee1",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,6 @@
     "    print(f\"\\nProcessing folder: {folder}\")\n",
     "    folder_data = pd.DataFrame()\n",
     "    \n",
-    "    # Read and merge all Parquet files in this folder\n",
     "    for parquet_file in files:\n",
     "        response = client.get_object(bucket_name, parquet_file)\n",
     "        data = response.read()\n",
@@ -139,10 +138,8 @@
     "        folder_data = pd.concat([folder_data, df], ignore_index=True)\n",
     "        print(f\"Processed: {parquet_file}\")\n",
     "    \n",
-    "    # Create CSV filename from folder name\n",
     "    csv_filename = f\"{folder.replace('/', '_')}.csv\"\n",
     "    \n",
-    "    # Save the merged data for this folder as CSV\n",
     "    folder_data.to_csv(csv_filename, index=False)\n",
     "    print(f\"Saved {len(folder_data)} rows to {csv_filename}\")\n",
     "\n",
